[project]
name = "langgraph-v1-0-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "ipython>=9.11.0",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langmem>=0.0.30",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
]
